fix overflow

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -117,7 +117,7 @@ body {
   }
 
   &__nav {
-    overflow-x: scroll;
+    overflow-x: auto;
     overflow-y: hidden;
   }
 
